<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@mipmap/ic_home_grey600_36dp"
            android:title="@string/home"/>
        <item
            android:id="@+id/nav_sub"
            android:icon="@mipmap/ic_access_point_grey600_36dp"
            android:title="@string/subscribe"/>
        <item
            android:id="@+id/nav_collect"
            android:icon="@mipmap/ic_star_grey600_36dp"
            android:title="@string/collection"/>
        <item
            android:id="@+id/download"
            android:icon="@mipmap/ic_download_grey600_36dp"
            android:title="@string/download"/>
    </group>

    <item android:title="@string/app_description">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@mipmap/ic_share_variant_grey600_36dp"
                android:title="@string/share"/>
            <item
                android:id="@+id/setting"
                android:icon="@mipmap/ic_settings_grey600_36dp"
                android:title="@string/setting"/>
        </menu>
    </item>

</menu>
