<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/bg_login"
                tools:context="cn.jas0n.amovie.ui.activity.LoginActivity">

    <android.support.design.widget.TextInputEditText
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="36dp"
        android:layout_marginRight="36dp"
        android:layout_marginTop="200dp"
        android:background="@drawable/et_login_bg"
        android:hint="@string/email_phone"
        android:inputType="textEmailAddress"
        android:paddingLeft="25dp"
        android:paddingRight="25dp"
        android:textColor="@color/white_90"
        android:textColorHint="@color/white_90"
        android:textSize="12sp"/>

    <android.support.design.widget.TextInputEditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@id/name"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="36dp"
        android:layout_marginRight="36dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/et_login_bg"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:paddingLeft="25dp"
        android:paddingRight="25dp"
        android:textColor="@color/white_90"
        android:textColorHint="@color/white_90"
        android:textSize="12sp"/>

    <TextView
        android:id="@+id/login"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@id/password"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="36dp"
        android:layout_marginRight="36dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/selector_bg_btn_login"
        android:clickable="true"
        android:gravity="center"
        android:text="@string/login"
        android:textColor="@color/white"
        android:textSize="14sp"/>
</RelativeLayout>
